--- a/home/templates/registro.html
+++ b/home/templates/registro.html
@@ -25,7 +25,7 @@
           <div class="card-body p-4 p-md-5">
             <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Regístrate</h3>
 
-            <form action="/formulario" method="POST">
+            <form method="POST" action="{{ url_for('register') }}">
 
               <!-- Datos personales -->
               <fieldset>
